--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             </p>
           </div>
         </div>
+        <h2 class="process">제작중...</h2>
       </header>
       <section></section>
       <footer></footer>
